<resources>
    <string name="app_name">LOLketing</string>
    <string name="imageContentDescription">이미지</string>
    <string name="login">로그인</string>
    <string name="google_login">구글 로그인</string>
    <string name="naver_login">네이버 로그인</string>
    <string name="kakao_login">카카오 로그인</string>
    <string name="hint_id">아이디를 입력해주세요</string>
    <string name="hint_pw">비밀번호를 입력해주세요</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="or">or</string>
    <string name="guide_input_id_pw">아이디 또는 비밀번호를 입력해주세요</string>
    <string name="guide_check_id_pw">아이디 또는 비밀번호를 확인해주세요</string>
    <string name="guide_create_id">이메일 형식의 아이디를 입력해주세요.</string>
    <string name="guide_create_pw">영문, 숫자, 특수 문자를 모두 포함하여 6~20자를 입력하주세요</string>
    <string name="guide_create_pw_check">비밀번호와 비밀번호 확인과 동일한지 확인해주세요</string>
    <string name="guide_check_pw">비밀번호를 확인해 주세요</string>
    <string name="guide_google_login_fail">구글 로그인에 실패하였습니다.</string>
    <string name="join">회원가입</string>
    <string name="hint_pw_check">비밀번호를 다시 입력해주세요</string>
    <string name="already_join">회원가입된 아이디입니다.</string>
    <string name="join_failure">회원가입에 실패하였습니다.</string>
    <string name="user_register_success">유저 등록을 성공하였습니다.</string>
    <string name="user_register_failure">유저 등록을 실패하였습니다.</string>
    <string name="guide_input_check">입력한 내용을 확인해주세요</string>
    <string name="find">찾기</string>
    <string name="error_not_found_id">가입되지 않은 아이디입니다.</string>
    <string name="guide_resent_password">이메일로 비밀번호 재설정 메일을 전송하였습니다.</string>
    <string name="register">등록</string>
    <string name="select">선택</string>
    <string name="modify">수정</string>
    <string name="address">주소</string>
    <string name="hint_address">지번, 도로명, 건물명으로 검색</string>
    <string name="guide_address">지번, 도로명, 건물명으로\n검색해보세요</string>
    <string name="address_setting">주소 설정</string>
    <string name="address_detail">상세 주소</string>
    <string name="guide_input_nickname">닉네임을 입력해주세요</string>
    <string name="guide_input_phone">전화번호를 입력해주세요</string>
    <string name="guide_input_address">주소를 입력해주세요</string>
    <string name="guide_register_nickname">닉네임 등록 후 앱을 이용해주세요</string>
    <string name="guide_create_nickname">닉네임은 2~10자로 입력해주세요</string>
    <string name="guide_create_phone">전화번호를 확인해 주세요</string>
    <string name="guide_update">업데이트가 완료되었습니다.</string>
    <string name="error_user_info_search">유저 정보 조회에 실패하였습니다</string>
    <string name="error_update">업데이트에 실패하였습니다.</string>
    <string name="accept_terms">이용약관 동의</string>
    <string name="select_board">팀 선택</string>
    <string name="write">글쓰기</string>
    <string name="empty_board_list">등록된 게시글이 없습니다\n첫 게시글을 등록해 주세요</string>
    <string name="select_category">카테고리를 선택해주세요</string>
    <string name="write_title">제목을 입력해주세요</string>
    <string name="image_attach">첨부할 이미지를 선택해주세요</string>
    <string name="input_contents">내용을 입력해주세요</string>
    <string name="select_image">이미지 선택</string>
    <string name="board_detail_title"><![CDATA[<font color=\"#F7DA6E\"><b>[%s]</b></font> %s]]></string>
    <string name="comments_detail">더보기 &amp; 댓글 작성</string>
    <string name="add_comment_success">댓글 등록 완료</string>
    <string name="add_comment_failure">댓글 등록 실패</string>
    <string name="error_board_load">게시글을 불러오는 과정에서 오류가 발생하였습니다.</string>
    <string name="board_write_complete">글이 작성 되었습니다.</string>
    <string name="board_modify_complete">글이 수정 되었습니다.</string>
    <string name="empty_comment">댓글이 없습니다.\n첫번째 댓글을 남겨주세요</string>
    <string name="guide_search">검색 결과가 없습니다.</string>
    <string name="guide_search_empty">검색 결과가 없습니다.\n다른 검색어로 다시 검색해보세요.</string>
    <string name="my_board">내가 쓴 글</string>
    <string name="team_info">구단 정보</string>
    <string name="writer">작성자</string>
    <string name="board_title">글 제목</string>
    <string name="search">검색하기</string>
    <string name="view_all">전체보기</string>
    <string name="insert_board">게시글 등록</string>
    <string name="new_coupon_using">신규 회원 쿠폰 사용하기</string>
    <string name="event_title_new_user">[이벤트] 신규 회원 이벤트</string>
    <string name="event_title_ticket_reserve">[이벤트] 티켓 구입 이벤트</string>
    <string name="event_title_roulette">RP 룰렛</string>
    <string name="roulette_title">100% 당첨 룰렛</string>
    <string name="roulette_message">돌리고 RP를 모아보세요!</string>
    <string name="roulette_count">%d번 더 돌릴 수 있어요!</string>
    <string name="roulette_start">돌리기</string>
    <string name="roulette_result">축하합니다! %dRP에 당첨되셨습니다!!</string>
    <string name="guide_take_roulette"><![CDATA[티켓 1장 당 룰렛 1회 이용 가능<br>티켓 구매하시고 추가 <font color=\"#03DAC5\"><b>RP</b></font> 받아가세요]]></string>
    <string name="guide_roulette_no_limit">해당 이벤트는 횟 수 제한 없이 참여 가능합니다.</string>
    <string name="event_1">Event 1</string>
    <string name="event_new_user_coupon">신규 가입 웰컴 선물</string>
    <string name="event_new_user_coupon_message">신규 가입 기념\n500RP 쿠폰 발급</string>
    <string name="get_coupon">쿠폰 받기</string>
    <string name="event_2">Event 2</string>
    <string name="event_ticket_reservation">티켓 예매 이벤트</string>
    <string name="go_to_roulette">룰렛 페이지 이동</string>
    <string name="ticket">티켓</string>
    <string name="ticketing_possible">예매 가능</string>
    <string name="ticketing_schedule_open">오픈 예정</string>
    <string name="ticketing_sold_out">매진</string>
    <string name="ticketing_finish">예매 종료</string>
    <string name="ticketing_time">%s\n%s</string>
    <string name="not_ticket">예매 가능한 티켓이 없습니다</string>
    <string name="guide_sold_out">매진되었습니다</string>
    <string name="guide_finish">경기가 종료되었습니다</string>
    <string name="guide_schedule_open">오픈 예정입니다</string>
    <string name="add_game">경기 추가</string>
    <string name="add_game_success">경기 추가 완료</string>
    <string name="add_game_failure">경기 추가 실패</string>
    <string name="ticket_guide">티켓 안내</string>
    <string name="ticket_guide_button">티켓 안내 ></string>
    <string name="ticket_info">티켓 정보</string>
    <string name="personnel">인원</string>
    <string name="seat">좌석</string>
    <string name="guide_select_seat">좌석을 선택해 주세요</string>
    <string name="overflow_select">선택한 인원수 보다 많이 선택하였습니다.</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="hall_a">A홀</string>
    <string name="make_reservation">예매하기</string>
    <string name="payment">결제하기</string>
    <string name="payment_success">결제가 완료되었습니다</string>
    <string name="reserve_info">예매 안내</string>
    <string name="reserve_open_label">예매 오픈 일시</string>
    <string name="reserve_open">해당 경기 5일 전</string>
    <string name="ticket_price">좌석당 11,000원</string>
    <string name="reservation_seats">좌석 예매</string>
    <string name="guide_reservation_seats">예매마다 최소 1 좌석, 최대 2좌석 구매 가능</string>
    <string name="reserve_cancel">예매 취소</string>
    <string name="guide_reserve_cancel">경기 당일 경기시간 4시간 전까지 가능\n(이후 최소, 환불, 변경 불가)\n예매 당일 취소 수수료 없이 취소가능\n이후 최소 시 티켓 금액의 10% 취소 수수료 부과</string>
    <string name="disabled_ticket_info">장애인 및 휠체어석 티켓 안내</string>
    <string name="guide_disabled_ticket_info">휠체어석 예매 및 문의 : 고객센터 1544 – 1555\n장애인 할인 : 복지카드 소지자 본인 50% 할인\n(할인 관련 증빙서류 미지참 시 현장에서 차액 지불해야 함)</string>
    <string name="pick_up_ticket">티켓 수령 및 입장</string>
    <string name="guide_pick_up_ticket">- 티켓 박스 오픈 : 당일 경기 2시간 전\n- 1경기 입장시간 : 당일 경기 1시간 전\n- 2경기 입장시간 : 1경기 종료 이후\n- 운영 시간은 현장 상황에 따라 변경될 수 있습니다.\n- 휠체어석은 휠체어 이용 시에만 입장 및 관람이 가능합니다.\n- 본인 확인이 어려울 경우, 예매 티켓 수령이 불가합니다.\n- 모바일 티켓 캡쳐 이미지는 입장이 불가합니다.\n- 티켓 수령 시 반드시 본인 확인이 가능한 실물 신분증 (주민등록증, 운전면허증, 학생증 등)을 지참해 주시기 바랍니다.</string>
    <string name="notice">유의사항</string>
    <string name="guide_notice">- 경기일자 및 좌석 변경을 원할 시에는 기존 예매 건을 전체 취소하고 재예매를 진행하셔야 합니다.\n- 취소 좌석에 대한 좌석선점은 보장하지 않습니다.\n- 티켓은 현장 수령만 가능하십니다.\n- 예매 티켓 발권 시 부분 출력은 불가하며, 주문 건 전체 출력만 가능합니다.\n- 주차장 이용방법은 각 경기장 별 홈페이지를 통해 확인하시고, 관람 당일에는 매우 혼잡할 수 있으니 대중교통 이용을 추천합니다.\n- 티켓 예매, 결제, 수령 및 입장과 관련하여 &quot;주최측&quot;의 귀책사유 없는 일체 문제에 대해서는 &quot;관람객&quot;본인 스스로 책임을 부담합니다.</string>
    <string name="restrictions">관람 시 제한사항</string>
    <string name="guide_restrictions">- 입장 및 관람시 1인 1티켓을 소지하여야 합니다. (단 만 12세 미만의 경우 보호자 동반이 필요합니다.)\n- &quot;관람객&quot;은 경기를 촬영, 녹은, 기록할 수 없으며, 각종 TV, 인터넷 등과 같은 매체로 전파하거나 상업적 목적으로 이용할 수 없고, 이를 돕는 행가 금지됩니다.\n- &quot;주최측&quot;은 경기장에서 얻은 &quot;관람객&quot;의 음성 및 초상권을 무상으로 이용할 수 있으며, &quot;관람객&quot;의 경기장 입장은 이에 대한 동의로 간주됩니다.\n- 본 티켓은 &quot;주최측&quot;의 허가없이 판매, 교환, 환전, 증여 등의 일체의 양도 행위를 할 수 없습니다. &quot;관람객&quot;이 &quot;주최측&quot;에서 허가하지 않은 양도 행위로 인해 피해를 입을 경우, &quot;관람객&quot; 스스로 책임을 부답합니다.\n- &quot;관람객&quot;으 쾌적한 관람 및 안전을 위한 목적으로 &quot;주최측&quot;이 실시하는 모든 조치에 협력해야 하며, 경기가 시작된 이후에는 입장이 제한될 수 있습니다.&quot;관람객&quot;은 경기 당일 어떠한 경우에도 &quot;주최측&quot;의 허가없이 타인을 비방, 비하할 목적 또는 정치적, 상업적 목적의 설치물 (배너, 현수막, 심볼 등 모든 종류의 표현물)을 경기장에 반입 및 게재할 수 없으며, 위반 시 &quot;주최측&quot;은 경기 종료 시까지 해당 설치물에 대한 임의 보관을 요구할 수 있고, 불응 시 즉시 퇴장을 요구할 수 있습니다. 또한 다른 &quot;관람객&quot;의 경기 관람과 경기 운영을 방해하는 경우 등에 대해 &quot;주최측&quot;은 경고 없이 즉시 퇴장 또는 민/형사상의 책임을 요구할 수 있습니다.\n- 본 티켓은 티켓 전면에 표시된 해당 일이에만 유효하며, 예매분 티켓이 매진되었을 경우 현장 판매는 실시하지 않는 것을 원칙으로 합니다.\n- &quot;관람객&quot;은 &quot;주최측&quot;의 중대한 과실이나 고의로 인한 경우를 제외하고, 경기장 내 발설할 수 있는 모든 문제에 대해 스스로 책임을 부암합니다.\n- 티켓을 분실, 훼손, 미 소지 시 어떠한 경우에도 입장이 불가하고, 환불 및 재발급이 제한됩니다.\n- 결제하신 티켓의 가액에는 &quot;기념품&quot;이 포함되지 않습니다. 현장에서 지급 받는 &quot;기념품&quot;은 주최사가 제공하는 무료 지급 서비스이며, 교환, 환불, 반품, 수리 등을 요구살 수 없고, 분실 등의 이유로 재 지급을 요구살 수 없으며, 양도 불가한 상품입니다.\n- 상기 명시된 내용에 대한 미 숙지로 인한 책임은 &quot;관람객&quot;본인에게 있으며, 이를 위반한 경우 &quot;관람객&quot;의 관람은 거부되고, 티켓은 무효로 간주되며 환불되지 않습니다. 또한 1회라 하더라도 중대한 위반을 하거나, 상습적이고 지속적인 위반행위를 하는 &quot;관람객&quot;은 재 방문이 제한될 수 있습니다.</string>
    <string name="out_of_cache">잔액이 부족합니다. 캐시 충전 후 이용해주세요</string>
    <string name="label_out_of_cache">잔액 부족</string>
    <string name="refund">티켓 환불</string>
    <string name="refund_impossible">환불 불가</string>
    <string name="refund_success">환불 처리가 완료되었습니다</string>
    <string name="time">시간</string>
    <string name="guide_refund">환불 안내</string>
    <string name="start_more_than_24hour">경기 시작 기준으로 24시간 이상일 경우</string>
    <string name="all_refund">전액 환불</string>
    <string name="start_less_than_24hour">경기 시작 기준으로 24시간 미만일 경우</string>
    <string name="fee_10_refund">수수료 10% 제외한 금액 환불</string>
    <string name="start_less_than_1hour">경기 시작 기준으로 1시간 미만이나 경기 시작 이후일 경우</string>
    <string name="my_cash">My 캐시</string>
    <string name="charging_cash">캐시 충전</string>
    <string name="charging_cache_title">충전할 금액</string>
    <string name="button_charging_cache">충전하기</string>
    <string name="label_guide_charging_cache">충전 시 주의사항</string>
    <string name="guide_charging_cache"><![CDATA[\'롤켓팅\'의 캐시는 가상 머니입니다.<br>원하시는 충전 금액을 입력하시고<br>충전하기 버튼을 눌러주세요.<br><br><font color=\"#03DAC5\"><b>최소 충전</b></font> 금액은 1,000원이며<br><font color=\"#03DAC5\"><b>최대 보유 캐시</b></font>는 1억원 입니다.]]></string>
    <string name="retained_cache">보유한 캐시</string>
    <string name="amount_charging_cache">충전할 캐시</string>
    <string name="won">원</string>
    <string name="zero_won">0 원</string>
    <string name="ten_thousand_won">+1만 원</string>
    <string name="hundred_thousand_won">+10만 원</string>
    <string name="million_won">+100만 원</string>
    <string name="success_charging_cache">캐시 충전을 완료하였습니다</string>
    <string name="game_time">경기 시간</string>
    <string name="area">장소</string>
    <string name="game_area">LoL PARK</string>
    <string name="error_news_search">뉴스 조회에 실패하였습니다.</string>
    <string name="coupon">My 쿠폰</string>
    <string name="already_used_coupon">이미 사용한 쿠폰입니다.</string>
    <string name="new_user_coupon_used">500 포인트가 지급되었습니다</string>
    <string name="roulette_count_zero">폰</string>
    <string name="available_coupon">사용 가능</string>
    <string name="used_coupon">사용 완료</string>
    <string name="show_detail">상세보기</string>
    <string name="report_type">신고 유형을 선택해주세요</string>
    <string name="report_promotion">부적절한 홍보게시물</string>
    <string name="report_obscenity">음란성 또는 청소년에게 부적합한 내용</string>
    <string name="report_copyright">명예훼손/사생활 침해 및 저작권침해</string>
    <string name="report_etc">기타</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
</resources>