<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.ezen.lolketing.view.login.LoginActivity" />

        <variable
            name="vm"
            type="com.ezen.lolketing.view.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:paddingHorizontal="30dp"
        tools:context=".view.login.LoginActivity">

        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="188dp"
            android:layout_height="98dp"
            android:contentDescription="@string/imageContentDescription"
            android:src="@drawable/lolketing_logo"
            app:layout_constraintBottom_toTopOf="@id/loginId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.ezen.lolketing.view.custom.CustomEditTextView
            android:id="@+id/loginId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/ic_user"
            android:hint="@string/hint_id"
            android:inputType="textEmailAddress"
            android:text="@={vm.loginInfo.id}"
            app:layout_constraintBottom_toTopOf="@id/loginPw"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.ezen.lolketing.view.custom.CustomEditTextView
            android:id="@+id/loginPw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/ic_pw"
            android:hint="@string/hint_pw"
            android:inputType="textPassword"
            android:text="@={vm.loginInfo.password}"
            app:layout_constraintBottom_toTopOf="@id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginBottom="64dp"
            android:onClick="@{() -> vm.emailLogin()}"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="3dp"
            app:layout_constraintBottom_toTopOf="@id/viewLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/btnFindID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> activity.goToFindPassword()}"
            android:text="@string/find_pw"
            android:textColor="@color/sub_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/viewLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" />

        <TextView
            android:id="@+id/btn_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> activity.goToJoin()}"
            android:text="@string/join"
            android:textColor="@color/sub_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/btnFindID"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnFindID" />

        <View
            android:id="@+id/viewLine"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="@color/light_gray"
            app:layout_constraintBottom_toTopOf="@id/btnGoogleLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="10dp"
            android:text="@string/or"
            android:textColor="@color/light_gray"
            app:layout_constraintBottom_toBottomOf="@id/viewLine"
            app:layout_constraintEnd_toEndOf="@id/viewLine"
            app:layout_constraintStart_toStartOf="@id/viewLine"
            app:layout_constraintTop_toTopOf="@id/viewLine" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoogleLogin"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginBottom="90dp"
            android:backgroundTint="@color/white"
            android:text="@string/google_login"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/logo_google"
            app:layout_constraintBottom_toBottomOf="@id/btnGoogleLogin"
            app:layout_constraintStart_toStartOf="@id/btnGoogleLogin"
            app:layout_constraintTop_toTopOf="@id/btnGoogleLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>