<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="dialog"
            type="com.ezen.lolketing.view.dialog.CashChargingDialog" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_board"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/light_black"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_const"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/charging_cash"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textColor="@color/light_gray"
                android:textSize="16sp"
                app:html="@{@string/guide_charging_cache}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtTitle"
                tools:text="@string/guide_charging_cache" />

            <TextView
                android:id="@+id/labelMyCash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="27dp"
                android:text="@string/my_cash"
                android:textColor="@color/light_gray"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtMessage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@{dialog.cash}"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/labelMyCash"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/labelMyCash"
                tools:text="100,000원" />

            <com.ezen.lolketing.view.custom.CustomEditTextView
                android:id="@+id/editAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="16dp"
                android:drawablePadding="10dp"
                android:hint="@string/charging_cache_title"
                android:inputType="numberDecimal"
                android:maxLength="9"
                app:layout_constraintTop_toBottomOf="@id/labelMyCash" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/won"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/editAmount"
                app:layout_constraintEnd_toEndOf="@id/editAmount"
                app:layout_constraintTop_toTopOf="@id/editAmount" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/gray"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="@{() -> dialog.dismiss()}"
                android:text="@string/cancel"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnOk"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editAmount"
                app:strokeColor="@color/gray" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="@{() -> dialog.onOkClick()}"
                android:text="@string/ok"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnCancel"
                app:layout_constraintTop_toTopOf="@id/btnCancel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>