<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.ezen.lolketing.view.login.find.FindPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:paddingHorizontal="20dp"
        tools:context=".view.login.find.FindPasswordActivity">

        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="188dp"
            android:layout_height="98dp"
            android:contentDescription="@string/imageContentDescription"
            android:src="@drawable/lolketing_logo"
            app:layout_constraintBottom_toTopOf="@id/editId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.ezen.lolketing.view.custom.CustomEditTextView
            android:id="@+id/editId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="295dp"
            android:drawableStart="@drawable/ic_user"
            android:hint="@string/hint_id"
            android:singleLine="true"
            android:text="@={vm.email}"
            app:layout_constraintBottom_toTopOf="@id/btnFind"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFind"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:onClick="@{() -> vm.findPassword()}"
            android:text="@string/find"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>