<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="dialog"
            type="com.ezen.lolketing.view.dialog.DialogReport" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_board"
        style="?attr/materialCardViewOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_const"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/report_type"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/ic_cancel"
                android:onClick="@{dialog::onCancel}"
                app:layout_constraintBottom_toBottomOf="@id/txtTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/txtTitle" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="1dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtTitle">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioPromotion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/checkbox_state_light_black"
                    android:button="@android:color/transparent"
                    android:paddingHorizontal="20dp"
                    android:text="@string/report_promotion"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioCopyright"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/checkbox_state"
                    android:button="@android:color/transparent"
                    android:paddingHorizontal="20dp"
                    android:text="@string/report_copyright"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioObscenity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/checkbox_state_light_black"
                    android:button="@android:color/transparent"
                    android:paddingHorizontal="20dp"
                    android:text="@string/report_obscenity"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioEtc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/checkbox_state"
                    android:button="@android:color/transparent"
                    android:paddingHorizontal="20dp"
                    android:text="@string/report_etc"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@android:color/transparent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="@{dialog::onCancel}"
                android:text="@string/cancel"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnOk"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioGroup"
                app:strokeColor="@color/main_color"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="@{dialog::onOkClick}"
                android:text="@string/ok"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="3dp"
                app:layout_constraintBottom_toBottomOf="@id/btnCancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnCancel"
                app:layout_constraintTop_toTopOf="@id/btnCancel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>